--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,4 @@
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
+@import '~font-awesome/scss/font-awesome.scss';
